[package]
name = "drogue-async"
version = "0.1.0"
authors = ["Bob McWhirter <bmcwhirt@redhat.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.heapless]
version = "0.5.6"

[dependencies.log]
version = "0.4.11"

[target.'cfg(target_arch = "arm")'.dependencies]
cortex-m = "0.6.3"

