[package]
name = "drogue-async"
version = "0.1.0"
authors = ["Bob McWhirter <bmcwhirt@redhat.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.paste]
version = "1.0.3"

[dependencies.heapless]
version = "0.5.6"

[dependencies.log]
version = "0.4.11"

[dependencies.cortex-m]
version = "0.6"
optional = true

########################################################################
# features
########################################################################
[features]
default = ["std"]
std = []

########################################################################
# cortex-m dependencies
########################################################################

[target.'cfg(target_arch = "arm")'.dependencies]
cortex-m = "0.6.3"

########################################################################
# development dependencies
########################################################################

[dev-dependencies.log]
version = "0.4.11"
features = ["std"]

[dev-dependencies.simple_logger]
version = "1.11.0"

